--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Microsoft.Samples.Kinect.BodyBasics.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Body Basics" 
+        Title="Fall-Detection" 
         Height="600" Width="700" 
         Loaded="MainWindow_Loaded"
         Closing="MainWindow_Closing">
@@ -11,21 +11,25 @@
         <SolidColorBrush x:Key="KinectBlueBrush" Color="#ff00BCF2" />
     </Window.Resources>
     <Grid Margin="10 0 10 0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="13*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0 10 0 5" />
-        <TextBlock Name="TextH" Text="Postinio" FontSize="15" HorizontalAlignment="Right" Margin="0,18,14,22" Width="177"/>
-        <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5" />
+        <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0,16,0,12" Grid.ColumnSpan="2" />
+        <TextBlock Name="TextH" Text="Postinio" FontSize="15" HorizontalAlignment="Right" Margin="0,18,14,22" Width="177" Grid.Column="1"/>
+        <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="263.095,0,311,5" Grid.Column="1" />
 
-        <Viewbox Grid.Row="1" HorizontalAlignment="Center">
+        <Viewbox Grid.Row="1" HorizontalAlignment="Center" Grid.Column="1" Margin="288.095,0,336,0">
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
         </Viewbox>
 
-        <StatusBar Grid.Row="2" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
+        <StatusBar Grid.Row="2" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}" Grid.ColumnSpan="2">
             <StatusBarItem Content="{Binding StatusText}" />
         </StatusBar>
     </Grid>
