--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,10 +11,6 @@
         <SolidColorBrush x:Key="KinectBlueBrush" Color="#ff00BCF2" />
     </Window.Resources>
     <Grid Margin="10 0 10 0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="13*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -22,10 +18,11 @@
         </Grid.RowDefinitions>
 
         <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0,16,0,12" Grid.ColumnSpan="2" />
-        <TextBlock Name="TextH" Text="Postinio" FontSize="15" HorizontalAlignment="Right" Margin="0,18,14,22" Width="177" Grid.Column="1"/>
-        <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="263.095,0,311,5" Grid.Column="1" />
+        <TextBlock Name="TextH" Text="Postinion" FontSize="15" HorizontalAlignment="Right" Margin="0,18,14,22" Width="177" Grid.Column="1"/>
+        <TextBlock Name="Texts" Text="Alert" FontSize="15" HorizontalAlignment="Left" Margin="159,10,0,30" Width="177"  Grid.Column="1"/>
 
-        <Viewbox Grid.Row="1" HorizontalAlignment="Center" Grid.Column="1" Margin="288.095,0,336,0">
+
+        <Viewbox Grid.Row="1" HorizontalAlignment="Center">
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
         </Viewbox>
 
