--- a/main.xaml
+++ b/main.xaml
@@ -7,7 +7,12 @@
         mc:Ignorable="d"
         Title="main" Height="300" Width="300">
     <Grid>
-        <Button Content="BEGIN" HorizontalAlignment="Left" Margin="98,136,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
+        <Button Content="BEGIN" HorizontalAlignment="Left" Margin="98,136,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Background="#FF86E0D8"/>
+        <ProgressBar HorizontalAlignment="Left" Height="11" VerticalAlignment="Top" Width="143" Margin="70,209,0,0" Name="progress" IsIndeterminate="False"  >
+
+        </ProgressBar>
+        <TextBlock Name="please" Text="" FontSize="12" HorizontalAlignment="Left" Margin="110,187,0,58" Width="65"/>
 
     </Grid>
 </Window>
